--- a/reset-password.html
+++ b/reset-password.html
@@ -1,111 +1,10 @@
-<?php
-// Initialize the session
-session_start();
-
-// Check if the user is logged in
-if (!isset($_SESSION["loggedin"]) || $_SESSION["loggedin"] !== true) {
-    header("location: login.php");
-    exit;
-}
-
-// Include config file
-require_once "config.php";
-
-// Define variables and initialize with empty values
-$new_password = $confirm_password = "";
-$new_password_err = $confirm_password_err = "";
-
-// Processing form data when form is submitted
-if ($_SERVER["REQUEST_METHOD"] == "POST") {
-    if (isset($_POST['submit'])) {
-        // Validate new password
-        if (empty(trim($_POST["new_password"]))) {
-            $new_password_err = "Please enter the new password.";
-        } elseif (strlen(trim($_POST["new_password"])) < 6) {
-            $new_password_err = "Password must have at least 6 characters.";
-        } else {
-            $new_password = trim($_POST["new_password"]);
-        }
-
-        // Validate confirm password
-        if (empty(trim($_POST["confirm_password"]))) {
-            $confirm_password_err = "Please confirm the password.";
-        } else {
-            $confirm_password = trim($_POST["confirm_password"]);
-            if (empty($new_password_err) && ($new_password != $confirm_password)) {
-                $confirm_password_err = "Password did not match.";
-            }
-        }
-
-        // Check input errors before updating the database
-        if (empty($new_password_err) && empty($confirm_password_err)) {
-            // Prepare an update statement
-            $sql = "UPDATE consumers SET password = ?, isUpdated = ? WHERE id = ?";
-
-            if ($stmt = $link->prepare($sql)) {
-                // Bind variables to the prepared statement as parameters
-                $stmt->bind_param("ssi", $param_password, $param_isUpdated, $param_id);
-
-                // Set parameters
-                $param_password = password_hash($new_password, PASSWORD_DEFAULT);
-                $param_isUpdated = 1;
-                $param_id = $_SESSION["id"];
-
-                // Attempt to execute the prepared statement
-                if ($stmt->execute()) {
-                    // Password updated successfully. Show success message and redirect to login page
-                    echo '<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>';
-                    echo '<script>
-                    Swal.fire({
-                        title: "Success!",
-                        text: "Your password has been reset successfully. You will be redirected to the login page.",
-                        icon: "success",
-                        toast: true,
-                        position: "top-right",
-                        showConfirmButton: false,
-                        timer: 3000
-                    }).then(() => {
-                        window.location.href = "login.php";
-                    });
-                    </script>';
-                } else {
-                    // Show error message
-                    echo '<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>';
-                    echo '<script>
-                    Swal.fire({
-                        title: "Error!",
-                        text: "Oops! Something went wrong. Please try again later.",
-                        icon: "error",
-                        toast: true,
-                        position: "top-right",
-                        showConfirmButton: false,
-                        timer: 3000
-                    });
-                    </script>';
-                }
-
-                // Close statement
-                $stmt->close();
-            }
-        }
-
-        // Close connection
-        $link->close();
-    } elseif (isset($_POST['cancel'])) {
-        // Redirect to index page on cancel
-        header("location: index.php");
-        exit;
-    }
-}
-?>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Reset Password</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap CSS v5.2.1 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <link rel="icon" href="logo.png" type="image/icon type">
     <style>
@@ -131,8 +30,9 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
                                 <p class="text-center h1 fw-bold mb-4 mx-1 mx-md-3 mt-3">Reset Password</p>
                                 <p class="text-center">Please fill out this form to reset your password.</p>
                                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-                                    <form class="mx-1 mx-md-4" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?>" method="post">
+                                    <form class="mx-1 mx-md-4" action="reset_password.php" method="post">
                                         <div class="d-flex flex-row align-items-center mb-4 mt-5">
+                                            <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
                                                 <label class="form-label" for="new_password"><i class="bi bi-chat-left-dots-fill"></i> New Password</label>
                                                 <input type="password" id="new_password" class="form-control form-control-lg py-3" name="new_password" autocomplete="off" placeholder="Enter your password" style="border-radius:25px;" />
@@ -141,6 +41,7 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
                                         </div>
 
                                         <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
                                                 <label class="form-label" for="confirm_password"><i class="bi bi-chat-left-dots-fill"></i> Confirm Password</label>
                                                 <input type="password" id="confirm_password" class="form-control form-control-lg py-3" name="confirm_password" autocomplete="off" placeholder="Enter your password" style="border-radius:25px;" />
@@ -166,8 +67,8 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
     </section>
 
     <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeV4EZGzzkFwETDZO9dX5L24YFAYVoxOZn/8i" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script>
