--- a/consumer/index.html
+++ b/consumer/index.html
@@ -28,8 +28,8 @@
             <div class="flexbox">
                 <div class="box">
                     <h2>GCASH Details:</h2>
-                    <span>ROQUE C. ZAPA JR.</span>
-                    <div class="card-holder-name">09309631219</div>
+                    <span>SAMUEL U. MUllE JR.</span>
+                    <div class="card-holder-name">09309683269</div>
                 </div>
             </div>
         </div>
